gen/AngularaParser.java
// Generated from C:/Users/hp/Desktop/untitled2/src/AngularaParser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORT=1, SLASH=2, FROM=3, EXPORT=4, DEFAULT=5, CLASS=6, INTERFACE=7, 
		AT=8, NULL=9, EXTENDS=10, CONSTRUCTOR=11, IF=12, ELSE=13, LET=14, CONST=15, 
		NEW=16, THIS=17, COMPONENT=18, SELECTOR=19, STANDALONE=20, IMPORTS=21, 
		TEMPLATE=22, STYLE_URLS=23, STRING_TYPE=24, NUMBER_TYPE=25, BOOLEAN_TYPE=26, 
		VOID=27, AS=28, DOCTYPE=29, HTML=30, HEAD=31, BODY=32, META=33, TITLE=34, 
		BASE=35, LINK=36, ASSIGN=37, EQ=38, NE=39, EQ_STRICT=40, NE_STRICT=41, 
		PLUS=42, MULTIPLY=43, DIVIDE=44, MODULO=45, LOGICAL_AND=46, LOGICAL_OR=47, 
		ARROW=48, SPREAD=49, EXCLAMATION=50, SEMI_Q=51, COMMA=52, COLON=53, DOT=54, 
		LBRACE=55, RBRACE=56, LPAREN=57, RPAREN=58, LBRACK=59, RBRACK=60, BACKTICK=61, 
		DOLLAR=62, LT=63, GT=64, QUESTION=65, IMPLEMENTS=66, PRIVATE=67, PUBLIC=68, 
		PROTECTED=69, PIPE=70, BOOLEAN_LITERAL=71, NUMBER=72, TEMPLATE_STR=73, 
		STRING=74, IDENTIFIER=75, WS=76, LINE_COMMENT=77, BLOCK_COMMENT=78, MINUS=79;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_importStatement = 2, RULE_importClause = 3, 
		RULE_importItems = 4, RULE_componentDefinition = 5, RULE_componentMetadata = 6, 
		RULE_componentMetadataPropertyList = 7, RULE_componentMetadataProperty = 8, 
		RULE_decorator = 9, RULE_classDeclaration = 10, RULE_exportStatement = 11, 
		RULE_exportDefault = 12, RULE_classBody = 13, RULE_classElement = 14, 
		RULE_constructorDeclaration = 15, RULE_methodDeclaration = 16, RULE_paramList = 17, 
		RULE_param = 18, RULE_accessModifier = 19, RULE_fieldDeclaration = 20, 
		RULE_interfaceDeclaration = 21, RULE_interfaceBody = 22, RULE_interfaceProperty = 23, 
		RULE_typeAnnotation = 24, RULE_typeName = 25, RULE_typeArguments = 26, 
		RULE_typeAnnotationWithArray = 27, RULE_genericArguments = 28, RULE_genericTypeList = 29, 
		RULE_block = 30, RULE_statementInside = 31, RULE_variableDeclaration = 32, 
		RULE_destructuringAssignment = 33, RULE_destructuringList = 34, RULE_ifStatement = 35, 
		RULE_expressionStatement = 36, RULE_expression = 37, RULE_assignmentExpression = 38, 
		RULE_conditionalExpression = 39, RULE_logicalOrExpression = 40, RULE_logicalAndExpression = 41, 
		RULE_equalityExpression = 42, RULE_relationalExpression = 43, RULE_additiveExpression = 44, 
		RULE_multiplicativeExpression = 45, RULE_unaryExpression = 46, RULE_postfixExpression = 47, 
		RULE_primaryExpressionWithAssertion = 48, RULE_postfixAssertion = 49, 
		RULE_postfixOperator = 50, RULE_primaryExpression = 51, RULE_arrowFunction = 52, 
		RULE_arrowParameters = 53, RULE_parameterList = 54, RULE_parameter = 55, 
		RULE_arrowBody = 56, RULE_argumentList = 57, RULE_literal = 58, RULE_value = 59, 
		RULE_arrayLiteral = 60, RULE_objectLiteral = 61, RULE_objectProperty = 62, 
		RULE_htmlDocument = 63, RULE_htmlElement = 64, RULE_htmlTagName = 65, 
		RULE_htmlContent = 66, RULE_attribute = 67;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "importStatement", "importClause", "importItems", 
			"componentDefinition", "componentMetadata", "componentMetadataPropertyList", 
			"componentMetadataProperty", "decorator", "classDeclaration", "exportStatement", 
			"exportDefault", "classBody", "classElement", "constructorDeclaration", 
			"methodDeclaration", "paramList", "param", "accessModifier", "fieldDeclaration", 
			"interfaceDeclaration", "interfaceBody", "interfaceProperty", "typeAnnotation", 
			"typeName", "typeArguments", "typeAnnotationWithArray", "genericArguments", 
			"genericTypeList", "block", "statementInside", "variableDeclaration", 
			"destructuringAssignment", "destructuringList", "ifStatement", "expressionStatement", 
			"expression", "assignmentExpression", "conditionalExpression", "logicalOrExpression", 
			"logicalAndExpression", "equalityExpression", "relationalExpression", 
			"additiveExpression", "multiplicativeExpression", "unaryExpression", 
			"postfixExpression", "primaryExpressionWithAssertion", "postfixAssertion", 
			"postfixOperator", "primaryExpression", "arrowFunction", "arrowParameters", 
			"parameterList", "parameter", "arrowBody", "argumentList", "literal", 
			"value", "arrayLiteral", "objectLiteral", "objectProperty", "htmlDocument", 
			"htmlElement", "htmlTagName", "htmlContent", "attribute"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", null, "'from'", "'export'", "'default'", "'class'", 
			"'interface'", "'@'", "'null'", "'extends'", "'constructor'", "'if'", 
			"'else'", "'let'", "'const'", "'new'", "'this'", "'@Component'", "'selector'", 
			"'standalone'", "'imports'", "'template'", "'styleUrls'", "'string'", 
			"'number'", "'boolean'", "'void'", "'as'", null, "'html'", "'head'", 
			"'body'", "'meta'", "'title'", "'base'", "'link'", "'='", "'=='", "'!='", 
			"'==='", "'!=='", "'+'", "'*'", null, "'%'", "'&&'", "'||'", "'=>'", 
			"'...'", "'!'", "';'", "','", "':'", "'.'", "'{'", "'}'", "'('", "')'", 
			"'['", "']'", "'`'", "'$'", "'<'", "'>'", "'?'", "'implements'", "'private'", 
			"'public'", "'protected'", "'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IMPORT", "SLASH", "FROM", "EXPORT", "DEFAULT", "CLASS", "INTERFACE", 
			"AT", "NULL", "EXTENDS", "CONSTRUCTOR", "IF", "ELSE", "LET", "CONST", 
			"NEW", "THIS", "COMPONENT", "SELECTOR", "STANDALONE", "IMPORTS", "TEMPLATE", 
			"STYLE_URLS", "STRING_TYPE", "NUMBER_TYPE", "BOOLEAN_TYPE", "VOID", "AS", 
			"DOCTYPE", "HTML", "HEAD", "BODY", "META", "TITLE", "BASE", "LINK", "ASSIGN", 
			"EQ", "NE", "EQ_STRICT", "NE_STRICT", "PLUS", "MULTIPLY", "DIVIDE", "MODULO", 
			"LOGICAL_AND", "LOGICAL_OR", "ARROW", "SPREAD", "EXCLAMATION", "SEMI_Q", 
			"COMMA", "COLON", "DOT", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "LBRACK", 
			"RBRACK", "BACKTICK", "DOLLAR", "LT", "GT", "QUESTION", "IMPLEMENTS", 
			"PRIVATE", "PUBLIC", "PROTECTED", "PIPE", "BOOLEAN_LITERAL", "NUMBER", 
			"TEMPLATE_STR", "STRING", "IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT", 
			"MINUS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public HtmlDocumentContext htmlDocument() {
			return getRuleContext(HtmlDocumentContext.class,0);
		}
		public TerminalNode EOF() { return getToken(AngularaParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				htmlDocument();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 757735171717321682L) != 0) || ((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & 4599L) != 0)) {
					{
					{
					setState(137);
					statement();
					}
					}
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(143);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComponentStmtContext extends StatementContext {
		public ComponentDefinitionContext componentDefinition() {
			return getRuleContext(ComponentDefinitionContext.class,0);
		}
		public ComponentStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterComponentStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitComponentStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitComponentStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DecoratorStmtContext extends StatementContext {
		public DecoratorContext decorator() {
			return getRuleContext(DecoratorContext.class,0);
		}
		public ExportStatementContext exportStatement() {
			return getRuleContext(ExportStatementContext.class,0);
		}
		public DecoratorStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterDecoratorStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitDecoratorStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitDecoratorStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MethodStmtContext extends StatementContext {
		public MethodDeclarationContext methodDeclaration() {
			return getRuleContext(MethodDeclarationContext.class,0);
		}
		public MethodStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterMethodStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitMethodStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitMethodStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceStmtContext extends StatementContext {
		public InterfaceDeclarationContext interfaceDeclaration() {
			return getRuleContext(InterfaceDeclarationContext.class,0);
		}
		public InterfaceStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterInterfaceStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitInterfaceStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitInterfaceStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExportDefaultStmtContext extends StatementContext {
		public ExportDefaultContext exportDefault() {
			return getRuleContext(ExportDefaultContext.class,0);
		}
		public ExportDefaultStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterExportDefaultStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitExportDefaultStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitExportDefaultStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends StatementContext {
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public ImportStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfStmtContext extends StatementContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public IfStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterIfStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitIfStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitIfStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VarStmtContext extends StatementContext {
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public VarStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterVarStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitVarStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitVarStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExprStmtContext extends StatementContext {
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public ExprStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterExprStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitExprStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitExprStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExportStmtContext extends StatementContext {
		public ExportStatementContext exportStatement() {
			return getRuleContext(ExportStatementContext.class,0);
		}
		public ExportStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterExportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitExportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitExportStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ClassStmtContext extends StatementContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public ClassStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterClassStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitClassStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitClassStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new ImportStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				importStatement();
				}
				break;
			case 2:
				_localctx = new ComponentStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				componentDefinition();
				}
				break;
			case 3:
				_localctx = new DecoratorStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(148);
				decorator();
				setState(149);
				exportStatement();
				}
				break;
			case 4:
				_localctx = new ExportStmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(151);
				exportStatement();
				}
				break;
			case 5:
				_localctx = new ExportDefaultStmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(152);
				exportDefault();
				}
				break;
			case 6:
				_localctx = new ClassStmtContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(153);
				classDeclaration();
				}
				break;
			case 7:
				_localctx = new VarStmtContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(154);
				variableDeclaration();
				}
				break;
			case 8:
				_localctx = new ExprStmtContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(155);
				expressionStatement();
				}
				break;
			case 9:
				_localctx = new MethodStmtContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(156);
				methodDeclaration();
				}
				break;
			case 10:
				_localctx = new IfStmtContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(157);
				ifStatement();
				}
				break;
			case 11:
				_localctx = new InterfaceStmtContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(158);
				interfaceDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(AngularaParser.IMPORT, 0); }
		public ImportClauseContext importClause() {
			return getRuleContext(ImportClauseContext.class,0);
		}
		public TerminalNode FROM() { return getToken(AngularaParser.FROM, 0); }
		public TerminalNode STRING() { return getToken(AngularaParser.STRING, 0); }
		public TerminalNode SEMI_Q() { return getToken(AngularaParser.SEMI_Q, 0); }
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularaParserListener ) ((AngularaParserListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularaParserVisitor ) return ((AngularaParserVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}
